--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,3 +10,4 @@ jobs:
         run: |
           response=$(curl -s https://api.github.com/repos/actions/runner/releases/latest)
           echo "Response: $response"
+          version= $$response" | jq -r 'tag_name')
